# github-copilot-data-agent

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  snowflake_config.example.yaml  snowflake_config.yaml
.github/: copilot-instructions.md
.github/agents/: data-analytics.agent.md
.github/workflows/: ci.yml
data_agent/: __init__.py  __main__.py  ad_hoc.py  analysis.py  cli.py  config.py  diagnostics.py  io.py  models.py  ossie.py  snowflake.py
data_agent/ask/: __init__.py  analysis.py  compiler.py  coverage.py  report.py  service.py  validation.py  workspace.py
data_agent/bi/: __init__.py  extract.py
data_agent/reporting/: __init__.py  render.py  workspace.py
data_agent/security/: __init__.py  sql.py
data_agent/semantic/: __init__.py  competency.py  compiler.py  conversion.py  ingestion.py  models.py  ossie.py  review.py  review_ui.py  review_workspace.py  verification.py
data_agent/setup/: __init__.py  competency.py  conversion.py  diff.py  review.py  review_workspace.py  verification.py
docs/: ARCHITECTURE.md  ASK_DATA.md  DATA_AGENT.md  DESIGN.md  EXPLORATORY_ANALYSIS.md  Enterprise_Snowflake_Data_Agent_Blueprint.docx  Enterprise_Snowflake_Data_Agent_Blueprint.md  IMPLEMENTATION.md  OPERATING_GUIDE.md  REFERENCES.md  SEMANTIC_CONVERSION.md  SEMANTIC_MODELS.md  SEMANTIC_SETUP.md  TOOLS.md  WORKFLOW.md
memory/: README.md
reports/: README.md
scripts/: check_snowflake.py  convert_semantic.py  demo_analysis.py  demo_exploration.py  render_report_demo.py  validate_project.py
semantic/: README.md
tests/: __init__.py  test_analysis_workflow.py  test_connection_diagnostics.py  test_ossie_review.py  test_reporting.py  test_review_workspace.py  test_semantic_conversion.py  test_snowflake_connection.py
(+91 files in other folders)
