[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-snowflake-data-agent"
version = "0.1.0"
description = "Semantic-model-first GitHub Copilot Snowflake data agent"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.26,<5",
  "PyYAML>=6.0.3,<7",
  "sqlglot>=30.12,<31",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.14,<5"]
notebook = ["jupyterlab>=4.4,<5", "pandas>=2.2,<4", "matplotlib>=3.9,<4"]
dev = ["ruff>=0.9,<1", "mypy>=1.14,<2", "types-PyYAML>=6.0", "types-jsonschema>=4.26"]

[project.scripts]
data-agent = "data_agent.cli:main"

[tool.setuptools.packages.find]
include = ["data_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["ossie-main"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
